--- a/server/index.html
+++ b/server/index.html
@@ -30,7 +30,7 @@
       </div>
       <button class="btn btn-lg btn-danger btn-block login" type="submit" disabled>Code barre</button>
       <button class="btn btn-lg btn-primary btn-block login" id="connection" type="submit" disabled>Connexion</button>
-      <p class="mt-5 mb-3 text-muted">&copy; ptdr t ki</p>
+      <p class="mt-5 mb-3 text-muted">&copy; 2018-2019</p>
     </form>
     <script src="/assets/js/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
