Added authentication, dashboard.
Currently authentication is forced, password hashing with bcrypt is buggy. Since it's forced you can still access to the dashboard.

--- a/server/login.html
+++ b/server/login.html
@@ -16,20 +16,20 @@
   </head>
 
   <body class="text-center">
-    <form class="form-signin">
+    <form class="form-signin" action="/users/login" method="POST">
       <img class="mb-4" src="https://media.discordapp.net/attachments/432942390005727232/438339937532903434/satifrance_logo.png" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Connectez vous</h1>
       <label for="inputName" class="sr-only">Nom d'utilisateur</label>
-      <input type="text" id="inputName" class="form-control" placeholder="Nom d'utilisateur" required autofocus>
+      <input type="text" id="inputName" name="emailOrUsername" class="form-control" placeholder="Nom d'utilisateur" required autofocus>
       <label for="inputPassword" class="sr-only">Mot de passe</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+      <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Mot de passe" required>
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Rester connecté
         </label>
       </div>
-      <button class="btn btn-lg btn-danger btn-block login" type="submit" disabled>Code barre</button>
-      <button class="btn btn-lg btn-primary btn-block login" id="connection" type="submit" disabled>Connexion</button>
+      <button class="btn btn-lg btn-danger btn-block teal" type="submit" disabled>Code barre</button>
+      <button class="btn btn-lg btn-primary btn-block login" id="connection" type="submit">Connexion</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2018-2019</p>
     </form>
     <script src="/assets/js/jquery-3.3.1.min.js"></script>
@@ -37,25 +37,6 @@
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
     <script>
       var socket = io();
-      socket.on('connect', () => {
-        console.log('Connected.');
-        $('.login').prop("disabled", false);
-
-        socket.on('authenticated', () => {
-          alert('Auth success');
-          window.location.redirect(window.location.href + '/dashboard');
-        });
-
-        socket.on('unauthorized', function(err){
-          console.log("There was an error with the authentication:", err.message);
-        });
-      });
-
-      $('form').submit(e => {
-        console.log('Authentificating');
-        socket.emit('authentication', { username: $('#inputName').val(), password: $('#inputPassword').val() });
-        e.preventDefault();
-      });
-  </script>
+    </script>
   </body>
 </html>
