--- a/server/dashboard.html
+++ b/server/dashboard.html
@@ -6,13 +6,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Connexion</title>
+  <title>Tableau de bord</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/assets/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+  <link href="assets/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/assets/css/dashboard.css" type="text/css" rel="stylesheet">
+  <link href="assets/css/dashboard.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sign out</a>
+        <a class="nav-link" href="/logout">Sign out</a>
       </li>
     </ul>
   </nav>
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/dashboard/products">
                 <span data-feather="shopping-cart"></span>
                 Produits
               </a>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="col-sm-3">
-            <div class="card text-white bg-danger mb-3" style="width: 18rem; height: 100%">
+            <div class="card text-white bg-danger mb-3" style="width: 18rem;">
               <div class="card-header">
                 12 tondeuses
               </div>
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="col-sm-3">
-            <div class="card text-white bg-dark mb-3" style="width: 18rem; height: 100%">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
               <div class="card-header">
                 1977 boulons
               </div>
@@ -129,9 +129,9 @@
   <!-- Bootstrap core JavaScript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="/assets/js/jquery-3.3.1.min.js"></script>
-  <script src="/assets/js/popper.min.js"></script>
-  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
 
   <!-- Icons -->
   <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
@@ -140,7 +140,7 @@
   </script>
 
   <!-- Graphs -->
-  <script src="/assets/js/Chart.bundle.min.js"></script>
+  <script src="assets/js/Chart.bundle.min.js"></script>
   <script>
   </script>
 </body>
